--- a/src/components/infopages/products/components/ProduuctTestimonials.astro
+++ b/src/components/infopages/products/components/ProduuctTestimonials.astro
@@ -29,11 +29,11 @@
               <div
                 class="overflow-hidden rounded-full w-10 h-10 bg-gray-50 border border-gray-200"
               >
-                <img src="https://i.pravatar.cc/100?img=1" alt="" />
+                <img src="/images/testimonials/sad.jpg" alt="" />
               </div>
               <div class="flex-grow pl-3">
                 <h6 class="font-bold text-sm uppercase text-gray-600">
-                  Aravind Srinivas.
+                  Saad Saeed
                 </h6>
                 <span class="text-sm"
                   >Co-founder and CEO of <span
@@ -105,15 +105,13 @@
               <div
                 class="overflow-hidden rounded-full w-10 h-10 bg-gray-50 border border-gray-200"
               >
-                <img src="https://i.pravatar.cc/100?img=3" alt="" />
+                <img src="images/testimonials/yasin.jpg" alt="" />
               </div>
               <div class="flex-grow pl-3">
                 <h6 class="font-bold text-sm uppercase text-gray-600">
-                  Pieter Abbeel
+                  Yassin Baum
                 </h6>
-                <span class="text-sm"
-                  >Co-founder and President, <span
-                    class="text-accent-500 font-medium">Covariant.</span
+                <span class="text-sm">Software Co-Founder & CMO, <span class="text-accent-500 font-medium">Mailscale </span
                   ></span
                 >
               </div>
@@ -177,17 +175,17 @@
                 class="overflow-hidden rounded-full w-10 h-9 bg-gray-50 border border-gray-200"
               >
                 <img
-                  src="https://tse2.mm.bing.net/th?id=OIP.208rvqhW7bM5JtcsN_oy0AHaID&w=474&h=474&c=7"
+                  src="images/testimonials/lawn.jpg"
                   alt=""
                 />
               </div>
               <div class="flex-grow pl-3">
                 <h6 class="font-bold text-sm uppercase text-gray-600">
-                  Fei-Fei Li
+                  Léon Lawrence
                 </h6>
                 <span class="text-sm">
-                  Co-director, <span class="text-accent-500 font-medium"
-                    >Stanford Human-Centered AI Institute</span
+                  Founder <span class="text-accent-500 font-medium"
+                    >LawrenceEconomicsGmbH</span
                   ></span
                 >
               </div>
@@ -217,11 +215,11 @@
               </div>
               <div class="flex-grow pl-3">
                 <h6 class="font-bold text-sm uppercase text-gray-600">
-                  Andrew Ng
+                  Cancan Liu
                 </h6>
                 <span class="text-sm">
-                  Co-founder, <span class="text-accent-500 font-medium"
-                    >Coursera and Founder, Landing AI</span
+                  Co-founder & CEO <span class="text-accent-500 font-medium"
+                    >allO</span
                   ></span
                 >
               </div>
