new pricing and images added

--- a/src/components/landing/components/annual.astro
+++ b/src/components/landing/components/annual.astro
@@ -50,7 +50,7 @@ class="grid max-w-2xl grid-cols-1 py-4 mt- -mx-4 xl:-mx-12 sm:grid-cols-2 gap-y-
   >
 </section>
 <section class="flex flex-col px-6 rounded-3xl lg:py-8 bg-gray-50">
-  <h3 class="mt-5 text-lg text-black font-display">Starter</h3>
+  <h3 class="mt-5 text-lg text-black font-display">Starter, <span class="text-sm font-display  text-gray-600">then $0.13/min</span></h3>
   <p class="mt-2 text-sm text-gray-500">
     Good for those trying to get there, but are too far from it.
   </p>
@@ -127,7 +127,7 @@ class="grid max-w-2xl grid-cols-1 py-4 mt- -mx-4 xl:-mx-12 sm:grid-cols-2 gap-y-
 <section
   class="flex flex-col order-first px-6 py-8 rounded-3xl sm:px-8 bg-black  lg:order-none"
 >
-  <h3 class="mt-5 text-lg text-white font-display">Pro</h3>
+  <h3 class="mt-5 text-lg text-white font-display">Pro, <span class="text-sm font-display  text-white">then $0.13/min</span></h3>
   <p class="mt-2 text-sm text-accent-100">
     Best for growing companies or those who need some help.
   </p>
@@ -212,7 +212,9 @@ class="grid max-w-2xl grid-cols-1 py-4 mt- -mx-4 xl:-mx-12 sm:grid-cols-2 gap-y-
   >
 </section>
 <section class="flex flex-col px-6 rounded-3xl lg:py-8 bg-gray-50">
-  <h3 class="mt-5 text-lg text-black font-display">Growth</h3>
+  <h3 class="mt-5 text-lg text-black font-display">Growth,  <span class="text-sm font-display  text-gray-600">
+    then $0.08-0.13/min
+</span></h3>
   <p class="mt-2 text-sm text-gray-500">
     For teams, needing top performance.
   </p>
