--- a/src/components/infopages/Blog.astro
+++ b/src/components/infopages/Blog.astro
@@ -240,6 +240,20 @@
     image: "/images/Blogs/blog27.jpg",
     link: "/How-AI-Voice-Agents-Help-Small-Businesses-Grow",
   },
+  {
+    id: 28,
+    title: "Voice AI Agents vs. Human Agents",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog28.jpeg",
+    link: "/Voice-AI-Agents-vs-Human-Agents",
+  },
+  {
+    id: 29,
+    title: "Cost-Benefit Analysis of AI Phone Agents",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog29.jpeg",
+    link: "/Cost-Benefit-Analysis-of-AI-Phone-Agents",
+  },
 ];
 
  const reversedBlogs = [...blogs].reverse();
