--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -100,25 +100,25 @@ import VoiceAIButton from "../infopages/VoiceAIButton.astro";
             <!-- Left Text Section -->
           
             <!-- Grid Section -->
-            <div class="grid grid-cols-2 gap-2 lg:mt-8 md:grid-cols-6 mt-6">
+            <div class="grid grid-cols-2 gap-[6vh] md:gap-2 lg:mt-8 md:grid-cols-6 mt-6">
             
-              <div class="flex justify-center col-span-1 h-[4vh]">
-                <img alt="logo" src="/images/logos/openai.webp" />
+              <div class="flex justify-center col-span-1 ">
+                <img alt="logo" class="h-5 md:h-[4vh]" src="/images/logos/openai.webp" />
               </div>
               <div class="flex justify-center col-span-1">
-                <img alt="logo" class="h-8" src="/images/logos/Twilio-logo-red.webp" />
+                <img alt="logo" class="h-6 md:h-8" src="/images/logos/Twilio-logo-red.webp" />
               </div>
-              <div class="flex justify-center col-span-1 h-[4vh]">
-                <img alt="logo" src="/images/logos/Shopify_logo_2018.webp" />
-              </div>
-              <div class="flex justify-center col-span-1">
-                <img alt="logo" class="h-8" src="/images/logos/logo.svg" />
+              <div class="flex justify-center col-span-1 ">
+                <img alt="logo"  class="h-7 md:h-[4vh]" src="/images/logos/Shopify_logo_2018.webp" />
               </div>
               <div class="flex justify-center col-span-1">
-                <img alt="logo" class="h-12" src="/images/logos/magical.svg" />
+                <img alt="logo" class="h-5 md:h-8" src="/images/logos/logo.svg" />
+              </div>
+              <div class="flex justify-center col-span-1 ">
+                <img alt="logo" class="h-8 md:h-12" src="/images/logos/magical.svg" />
               </div>
               <div class="flex justify-center col-span-1">
-                <img alt="logo" class="h-12" src="/images/logos/AWRENCE2.svg" />
+                <img alt="logo" class="h-8 md:h-12" src="/images/logos/AWRENCE2.svg" />
               </div>
             </div>
           </div>
