--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -146,7 +146,7 @@ import Annual from "./components/annual.astro";
   
       <!-- Call to Action Button -->
       <a
-        class="inline-flex items-center justify-between cursor-pointer px-16 py-3 h-12 mt-auto text-center text-black transition duration-200 ease-in-out transform bg-white border-2 border-white hover:bg-transparent hover:border-white rounded-xl hover:text-white focus:outline-none"
+        class="mt-8 mx-auto md:mx-0 inline-flex items-center justify-between cursor-pointer px-16 py-3 h-12 md:mt-auto text-center text-black transition duration-200 ease-in-out transform bg-white border-2 border-white hover:bg-transparent hover:border-white rounded-xl hover:text-white focus:outline-none"
         aria-label="Enterprise tier"
         href="/enterprise"
       >
@@ -174,25 +174,25 @@ import Annual from "./components/annual.astro";
   
 
     <div class="mx-auto pt-12 lg:py-16">
-      <div class="grid grid-cols-2 gap-2 lg:mt-8 md:grid-cols-6 mt-6">
+      <div class="grid grid-cols-2 gap-[6vh] md:gap-2 lg:mt-8 md:grid-cols-6 mt-6">
             
-        <div class="flex justify-center col-span-1 h-[4vh]">
-          <img alt="logo" src="/images/logos/openai.webp" />
+        <div class="flex justify-center col-span-1 ">
+          <img alt="logo" class="h-5 md:h-[4vh]" src="/images/logos/openai.webp" />
         </div>
         <div class="flex justify-center col-span-1">
-          <img alt="logo" class="h-8" src="/images/logos/Twilio-logo-red.webp" />
+          <img alt="logo" class="h-6 md:h-8" src="/images/logos/Twilio-logo-red.webp" />
         </div>
-        <div class="flex justify-center col-span-1 h-[4vh]">
-          <img alt="logo" src="/images/logos/Shopify_logo_2018.webp" />
-        </div>
-        <div class="flex justify-center col-span-1">
-          <img alt="logo" class="h-8" src="/images/logos/logo.svg" />
+        <div class="flex justify-center col-span-1 ">
+          <img alt="logo"  class="h-7 md:h-[4vh]" src="/images/logos/Shopify_logo_2018.webp" />
         </div>
         <div class="flex justify-center col-span-1">
-          <img alt="logo" class="h-12" src="/images/logos/magical.svg" />
+          <img alt="logo" class="h-5 md:h-8" src="/images/logos/logo.svg" />
+        </div>
+        <div class="flex justify-center col-span-1 ">
+          <img alt="logo" class="h-8 md:h-12" src="/images/logos/magical.svg" />
         </div>
         <div class="flex justify-center col-span-1">
-          <img alt="logo" class="h-12" src="/images/logos/AWRENCE2.svg" />
+          <img alt="logo" class="h-8 md:h-12" src="/images/logos/AWRENCE2.svg" />
         </div>
       </div>
     </div>
