new blogs added

--- a/src/components/infopages/Blog.astro
+++ b/src/components/infopages/Blog.astro
@@ -254,6 +254,20 @@
     image: "/images/Blogs/blog29.jpeg",
     link: "/Cost-Benefit-Analysis-of-AI-Phone-Agents",
   },
+  {
+    id: 30,
+    title: "Benefits of Voice AI for Business",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog30.jpeg",
+    link: "/Benefits-of-Voice-AI-for-Business",
+  },
+  {
+    id: 31,
+    title: "The Rise of AI Voiceovers in Film and Animation",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog31.jpeg",
+    link: "/The-Rise-of-AI-Voiceovers-in-Film-and-Animation",
+  },
 ];
 
  const reversedBlogs = [...blogs].reverse();
