new blogs added

--- a/src/components/infopages/Blog.astro
+++ b/src/components/infopages/Blog.astro
@@ -48,7 +48,7 @@
   </div>
 </section>
 
-<script client:load>
+<script >
   const blogs = [
   {
     id: 1,
@@ -267,6 +267,20 @@
     description: "Explore how AI tools can boost your sales strategy.",
     image: "/images/Blogs/blog31.jpeg",
     link: "/The-Rise-of-AI-Voiceovers-in-Film-and-Animation",
+  },
+  {
+    id: 32,
+    title: "AI Outbound Calls in Customer Service: Proactive Outreach and Support",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog32.jpeg",
+    link: "/AI-Outbound-Calls-in-Customer-Service-Proactive-Outreach-and-Support",
+  },
+  {
+    id: 33,
+    title: "AI Outbound Calls in Real Estate: Generating Leads and Closing Deals",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog33.jpeg",
+    link: "/AI-Outbound-Calls-in-Real-Estate-Generating-Leads-and-Closing-Deals",
   },
 ];
 
