new images added

--- a/src/components/infopages/Blog.astro
+++ b/src/components/infopages/Blog.astro
@@ -272,14 +272,14 @@
     id: 32,
     title: "AI Outbound Calls in Customer Service: Proactive Outreach and Support",
     description: "Explore how AI tools can boost your sales strategy.",
-    image: "/images/Blogs/blog32.jpeg",
+    image: "/images/Blogs/blog32.jpg",
     link: "/AI-Outbound-Calls-in-Customer-Service-Proactive-Outreach-and-Support",
   },
   {
     id: 33,
     title: "AI Outbound Calls in Real Estate: Generating Leads and Closing Deals",
     description: "Explore how AI tools can boost your sales strategy.",
-    image: "/images/Blogs/blog33.jpeg",
+    image: "/images/Blogs/blog33.jpg",
     link: "/AI-Outbound-Calls-in-Real-Estate-Generating-Leads-and-Closing-Deals",
   },
 ];
