--- a/src/components/infopages/Blog.astro
+++ b/src/components/infopages/Blog.astro
@@ -282,6 +282,20 @@
     image: "/images/Blogs/blog33.jpg",
     link: "/AI-Outbound-Calls-in-Real-Estate-Generating-Leads-and-Closing-Deals",
   },
+  {
+    id: 34,
+    title: "What Is an AI Answering Service?",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog34.jpeg",
+    link: "/What-Is-an-AI-Answering-Service",
+  },
+  {
+    id: 35,
+    title: "How AI Answering Service & Virtual Receptionist Works",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog35.jpeg",
+    link: "/How-AI-Answering-Service-Virtual-Receptionist-Works",
+  },
 ];
 
  const reversedBlogs = [...blogs].reverse();
