--- a/src/components/global/Cta.astro
+++ b/src/components/global/Cta.astro
@@ -2,10 +2,15 @@
   <div class="relative">
     <div class="lg:absolute lg:inset-0 lg:left-1/2">
       <img
-        class=" w-full h-64 sm:h-80 lg:absolute object-left lg:h-full"
-        src="/images/compressed/Call Support section image without bg-min.png"
+        class="hidden lg:block w-full h-64 sm:h-80 lg:absolute object-left lg:h-full"
+        src="/images/compressed/Call Support image desktop view.png"
         alt=""
       />
+      <img
+      class=" lg:hidden w-full  lg:absolute"
+      src="/images/compressed/Call Support image desktop view.png"
+      alt=""
+    />
     </div>
     <div
       class="pt-16 pb-24 sm:pb-32 sm:pt-24 lg:mx-auto lg:grid lg:max-w-7xl lg:grid-cols-2 lg:pt-32">
