new images added

--- a/src/components/infopages/Blog.astro
+++ b/src/components/infopages/Blog.astro
@@ -258,14 +258,14 @@
     id: 30,
     title: "Benefits of Voice AI for Business",
     description: "Explore how AI tools can boost your sales strategy.",
-    image: "/images/Blogs/blog30.jpeg",
+    image: "/images/Blogs/blog30.jpg",
     link: "/Benefits-of-Voice-AI-for-Business",
   },
   {
     id: 31,
     title: "The Rise of AI Voiceovers in Film and Animation",
     description: "Explore how AI tools can boost your sales strategy.",
-    image: "/images/Blogs/blog31.jpeg",
+    image: "/images/Blogs/blog31.jpg",
     link: "/The-Rise-of-AI-Voiceovers-in-Film-and-Animation",
   },
   {
