new images added

--- a/src/components/global/Cta.astro
+++ b/src/components/global/Cta.astro
@@ -1,14 +1,15 @@
 <section class="bg-zinc-100 2xl:max-w-7xl mx-auto">
   <div class="relative">
     <div class="lg:absolute lg:inset-0 lg:left-1/2">
+
       <img
-        class="hidden lg:block w-full h-64 sm:h-80 lg:absolute object-left lg:h-full"
-        src="/images/compressed/Call Support image desktop view.png"
+        class=" h-full md:hidden"
+        src="/images/compressed/Call Support image without bg-1.png"
         alt=""
       />
       <img
-      class=" lg:hidden w-full  lg:absolute"
-      src="/images/compressed/Call Support image desktop view.png"
+      class="hidden  lg:block w-full  lg:absolute"
+      src="/images/compressed/Call Support image without bg.png"
       alt=""
     />
     </div>
