new blogs added

--- a/src/components/infopages/Blog.astro
+++ b/src/components/infopages/Blog.astro
@@ -139,7 +139,7 @@
     id: 13,
     title: "To AI Answering Service for 2024 Rapid Response with AI",
     description: "Explore how AI tools can boost your sales strategy.",
-    image: "/images/Blogs/blog12.png",
+    image: "/images/Blogs/blog13.png",
     link: "/To-AI-Answering-Service-for-2024-Rapid-Response-with-AI",
   },
   {
@@ -295,6 +295,13 @@
     description: "Explore how AI tools can boost your sales strategy.",
     image: "/images/Blogs/blog35.jpeg",
     link: "/How-AI-Answering-Service-Virtual-Receptionist-Works",
+  },
+  {
+    id: 36,
+    title: "AI Voice Agents for E-Commerce: Benefits & Examples",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog36.jpeg",
+    link: "/AI-Voice-Agents-for-E-Commerce-Benefits-&-Examples",
   },
 ];
 
