calcom link added

--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -53,7 +53,7 @@ import VoiceAIButton from "../infopages/VoiceAIButton.astro";
     <div class="flex justify-center gap-3 mt-10 flex-col sm:flex-row">
       <a
         class="items-center justify-center border-gray-200 h-10 font-medium rounded-lg focus-visible:outline-black focus:outline-none inline-flex duration-200 text-black lg:w-auto px-6 py-3 text-center text-black/80 w-full border"
-        href="https://zcal.co/i/cL7eACvt"
+        href="https://cal.com/callsupport/30min"
         target="_blank"
         rel="noopener noreferrer">Contact Sales</a
       >
