calcom link added

--- a/src/components/infopages/Enterprise.astro
+++ b/src/components/infopages/Enterprise.astro
@@ -166,7 +166,7 @@
   </div>
 </section>
 
-<script>
+<script client:load>
   document
     .getElementById("submissionForm")
     .addEventListener("submit", async (e) => {
