--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -1,6 +1,8 @@
-<section class="bg-white border-b border-black/5 sticky  top-0 z-50">
+<section class="bg-white border-b border-black/5 sticky top-0 z-50">
   <div class="w-full mx-auto md:px-12 px-8 max-w-7xl lg:px-16">
-    <div class="relative flex flex-col w-full py-5 mx-auto bg-white md:items-center md:justify-between md:flex-row md:px-6">
+    <div
+      class="relative flex flex-col w-full py-5 mx-auto bg-white md:items-center md:justify-between md:flex-row md:px-6"
+    >
       <!-- Logo Section -->
       <div class="flex flex-row items-center justify-between lg:justify-start">
         <a href="/" class="text-black inline-flex items-center gap-3">
@@ -13,34 +15,82 @@
           id="mobileMenuToggle"
           class="inline-flex items-center justify-center p-2 text-gray-400 hover:text-black focus:outline-none focus:text-black md:hidden"
         >
-          <svg class="w-6 h-6" stroke="currentColor" fill="none" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+          <svg
+            class="w-6 h-6"
+            stroke="currentColor"
+            fill="none"
+            viewBox="0 0 24 24"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M4 6h16M4 12h16M4 18h16"></path>
           </svg>
         </button>
       </div>
 
       <!-- Navigation Menu -->
-      <nav id="navMenu" class="hidden md:flex flex-col md:flex-row md:items-center md:justify-end">
+      <nav
+        id="navMenu"
+        class="hidden md:flex flex-col md:flex-row md:items-center md:justify-end"
+      >
         <!-- Products Dropdown -->
         <div id="productsDropdown" class="relative dropdown-container">
           <button
             class="px-2 lg:px-6 py-2 md:px-3 text-sm font-medium text-black hover:text-accent-400 flex items-center dropdown-button"
           >
             Products
-            <svg class="w-4 h-4 ml-1" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+            <svg
+              class="w-4 h-4 ml-1"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M19 9l-7 7-7-7"></path>
             </svg>
           </button>
-          <div class="hidden absolute left-0 w-48 bg-white border border-gray-200 rounded-md shadow-lg z-10 dropdown-menu">
-            <a href="/receptionist" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">AI Receptionist</a>
-            <a href="/ai-answering-service" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">AI Answering Service</a>
-            <a href="/ai-concierge" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">AI Concierge</a>
+          <div
+            class="hidden absolute left-0 w-48 bg-white border border-gray-200 rounded-md shadow-lg z-10 dropdown-menu"
+          >
+            <a
+              href="/receptionist"
+              class="block px-4 py-2 text-sm text-black hover:bg-gray-100"
+              >AI Receptionist</a
+            >
+            <a
+              href="/ai-answering-service"
+              class="block px-4 py-2 text-sm text-black hover:bg-gray-100"
+              >AI Answering Service</a
+            >
+            <a
+              href="/ai-concierge"
+              class="block px-4 py-2 text-sm text-black hover:bg-gray-100"
+              >AI Concierge</a
+            >
+            <!-- <a
+              href="/ai-voice-demo"
+              class="block px-4 py-2 text-sm text-black hover:bg-gray-100"
+              >AI Voice Demos</a
+            > -->
           </div>
         </div>
 
         <!-- Other Links -->
-        <a href="/#pricing" class="px-2 lg:px-6 py-2 md:px-3 text-sm font-medium text-black hover:text-accent-400">Pricing</a>
-        <a href="https://call-support.affonso.io/callsupport" class="px-2 lg:px-6 py-2 md:px-3 text-sm font-medium text-black hover:text-accent-400">
+        <a
+          href="/#pricing"
+          class="px-2 lg:px-6 py-2 md:px-3 text-sm font-medium text-black hover:text-accent-400"
+          >Pricing</a
+        >
+        <a
+          href="https://call-support.affonso.io/callsupport"
+          class="px-2 lg:px-6 py-2 md:px-3 text-sm font-medium text-black hover:text-accent-400"
+        >
           Affiliate
         </a>
 
@@ -50,41 +100,72 @@
             class="px-2 lg:px-6 py-2 md:px-3 text-sm font-medium text-black hover:text-accent-400 flex items-center dropdown-button"
           >
             Use Cases
-            <svg class="w-4 h-4 ml-1" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+            <svg
+              class="w-4 h-4 ml-1"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M19 9l-7 7-7-7"></path>
             </svg>
           </button>
-          <div class="hidden absolute left-0 w-48 bg-white border border-gray-200 rounded-md shadow-lg z-10 dropdown-menu">
-            <a href="/restaurant" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Restaurant</a>
-            <a href="/ecommerce" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Ecommerce</a>
-            <a href="/estate" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Real Estate</a>
+          <div
+            class="hidden absolute left-0 w-48 bg-white border border-gray-200 rounded-md shadow-lg z-10 dropdown-menu"
+          >
             <a
-            href="/recruitment"
-            class="block px-4 py-2 text-sm text-black hover:bg-gray-100"
-            >Recruitment</a
-          >
-          <a
-            href="/health"
-            class="block px-4 py-2 text-sm text-black hover:bg-gray-100"
-            >Health</a
-          >
-          <a
-            href="/solar"
-            class="block px-4 py-2 text-sm text-black hover:bg-gray-100"
-            >Solar</a
-          >
-          <a
-            href="/car-dealership"
-            class="block px-4 py-2 text-sm text-black hover:bg-gray-100"
-            >Car Dealership</a
-          >
+              href="/restaurant"
+              class="block px-4 py-2 text-sm text-black hover:bg-gray-100"
+              >Restaurant</a
+            >
+            <a
+              href="/ecommerce"
+              class="block px-4 py-2 text-sm text-black hover:bg-gray-100"
+              >Ecommerce</a
+            >
+            <a
+              href="/estate"
+              class="block px-4 py-2 text-sm text-black hover:bg-gray-100"
+              >Real Estate</a
+            >
+            <a
+              href="/recruitment"
+              class="block px-4 py-2 text-sm text-black hover:bg-gray-100"
+              >Recruitment</a
+            >
+            <a
+              href="/health"
+              class="block px-4 py-2 text-sm text-black hover:bg-gray-100"
+              >Health</a
+            >
+            <a
+              href="/solar"
+              class="block px-4 py-2 text-sm text-black hover:bg-gray-100"
+              >Solar</a
+            >
+            <a
+              href="/car-dealership"
+              class="block px-4 py-2 text-sm text-black hover:bg-gray-100"
+              >Car Dealership</a
+            >
           </div>
         </div>
 
         <!-- Login and Signup -->
         <div class="inline-flex items-center gap-2">
-          <a href="https://app.callsupport.ai/login" class="px-4 py-2 text-sm font-medium text-black hover:text-accent-400">Login</a>
-          <a href="https://app.callsupport.ai/signup" class="h-8 px-4 py-2 text-sm font-medium text-black bg-gray-100 rounded-lg hover:bg-gray-50">
+          <a
+            href="https://app.callsupport.ai/login"
+            class="px-4 py-2 text-sm font-medium text-black hover:text-accent-400"
+            >Login</a
+          >
+          <a
+            href="https://app.callsupport.ai/signup"
+            class="h-8 px-4 py-2 text-sm font-medium text-black bg-gray-100 rounded-lg hover:bg-gray-50"
+          >
             Get Started
           </a>
         </div>
