--- a/src/components/infopages/products/components/ProduuctTestimonials.astro
+++ b/src/components/infopages/products/components/ProduuctTestimonials.astro
@@ -1,6 +1,6 @@
-<div class="min-w-screen flex items-center justify-center py-5">
-  <div class="w-full bg-white px-5 py-16 md:py-24 text-gray-500">
-    <div class="w-full max-w-6xl mx-auto">
+<div class=" flex items-center justify-center py-5">
+  <div class=" bg-white px-5 py-16 md:py-24 text-gray-500">
+    <div class="">
       <div class="text-center max-w-xl mx-auto mb-8">
         <p
           class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display"
