new Blogs added

--- a/src/components/infopages/Blog.astro
+++ b/src/components/infopages/Blog.astro
@@ -303,6 +303,14 @@
     image: "/images/Blogs/blog36.jpeg",
     link: "/AI-Voice-Agents-for-E-Commerce-Benefits-&-Examples",
   },
+  {
+    id: 36,
+    title: "How AI Receptionists Help in the Healthcare Industry",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog37.jpeg",
+    link: "/How-AI-Receptionists-Help-in-the-Healthcare-Industry",
+  },
+
 ];
 
  const reversedBlogs = [...blogs].reverse();
