--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -45,7 +45,7 @@ import VoiceAIButton from "../infopages/VoiceAIButton.astro";
             </defs>
           </svg>
         </div>
-        <p class="text-gray-500 lg:text-md  text-base">Rated 4.7/5 on G2</p>
+        <!-- <p class="text-gray-500 lg:text-md  text-base">Rated 4.7/5 on G2</p> -->
       </div>
       
     </div>
