--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -29,25 +29,46 @@ import VoiceAIButton from "../infopages/VoiceAIButton.astro";
       <p class="text-gray-500 lg:text-xl max-w-2xl mt-4 mx-auto text-base">
         Automate all your phone calls with AI
       </p>
-      <div class="flex items-center justify-center mt-2 space-x-1">
+      <!-- <div class="flex items-center justify-center mt-2 space-x-1">
         <div class="w-6 h-6">
-          <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 24 25" fill="none" preserveAspectRatio="xMidYMid meet" aria-hidden="true" role="img">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="100%"
+            height="100%"
+            viewBox="0 0 24 25"
+            fill="none"
+            preserveAspectRatio="xMidYMid meet"
+            aria-hidden="true"
+            role="img"
+          >
             <g clip-path="url(#clip0_2773_28657)">
-              <path d="M12 24.5C18.6274 24.5 24 19.1274 24 12.5C24 5.87258 18.6274 0.5 12 0.5C5.37258 0.5 0 5.87258 0 12.5C0 19.1274 5.37258 24.5 12 24.5Z" fill="#081D47" fill-opacity="0.3"></path>
-              <path d="M17.2001 9.70075H15.1601C15.2001 9.38075 15.4001 9.18075 15.8001 8.98075L16.1601 8.78075C16.8401 8.46075 17.2001 8.06075 17.2001 7.42075C17.2048 7.23778 17.1677 7.05614 17.0914 6.88975C17.0151 6.72336 16.9018 6.57662 16.7601 6.46075C16.4258 6.2475 16.0366 6.1363 15.6401 6.14075C15.3177 6.13877 15.0005 6.22153 14.7201 6.38075C14.458 6.55598 14.2392 6.78851 14.0801 7.06075L14.6801 7.66075C14.7642 7.4636 14.9032 7.29473 15.0805 7.17419C15.2577 7.05365 15.4658 6.98652 15.6801 6.98075C16.0801 6.98075 16.2801 7.18075 16.2801 7.42075C16.2801 7.66075 16.1601 7.86075 15.7601 8.06075L15.5201 8.18075C15.0694 8.37873 14.6819 8.69704 14.4001 9.10075C14.1779 9.48994 14.0672 9.9328 14.0801 10.3808V10.5408H17.2001V9.70075Z" fill="white"></path>
-              <path d="M16.9198 11.5391H13.5198L11.8398 14.4591H15.2398L16.9198 17.3791L18.5998 14.4591L16.9198 11.5391Z" fill="white"></path>
-              <path d="M12.1203 16.4202C11.0806 16.4202 10.0836 16.0072 9.34841 15.2721C8.61327 14.5369 8.20027 13.5398 8.20027 12.5002C8.20027 11.4606 8.61327 10.4635 9.34841 9.72834C10.0836 8.9932 11.0806 8.5802 12.1203 8.5802L13.4803 5.7802C13.0315 5.69882 12.5763 5.65866 12.1203 5.6602C10.3062 5.6602 8.56641 6.38084 7.28366 7.66359C6.00091 8.94634 5.28027 10.6861 5.28027 12.5002C5.28027 14.3143 6.00091 16.0541 7.28366 17.3368C8.56641 18.6196 10.3062 19.3402 12.1203 19.3402C13.5677 19.3465 14.9806 18.8989 16.1603 18.0602L14.6803 15.4602C13.9717 16.0802 13.0618 16.4214 12.1203 16.4202Z" fill="white"></path>
+              <path
+                d="M12 24.5C18.6274 24.5 24 19.1274 24 12.5C24 5.87258 18.6274 0.5 12 0.5C5.37258 0.5 0 5.87258 0 12.5C0 19.1274 5.37258 24.5 12 24.5Z"
+                fill="#081D47"
+                fill-opacity="0.3"></path>
+              <path
+                d="M17.2001 9.70075H15.1601C15.2001 9.38075 15.4001 9.18075 15.8001 8.98075L16.1601 8.78075C16.8401 8.46075 17.2001 8.06075 17.2001 7.42075C17.2048 7.23778 17.1677 7.05614 17.0914 6.88975C17.0151 6.72336 16.9018 6.57662 16.7601 6.46075C16.4258 6.2475 16.0366 6.1363 15.6401 6.14075C15.3177 6.13877 15.0005 6.22153 14.7201 6.38075C14.458 6.55598 14.2392 6.78851 14.0801 7.06075L14.6801 7.66075C14.7642 7.4636 14.9032 7.29473 15.0805 7.17419C15.2577 7.05365 15.4658 6.98652 15.6801 6.98075C16.0801 6.98075 16.2801 7.18075 16.2801 7.42075C16.2801 7.66075 16.1601 7.86075 15.7601 8.06075L15.5201 8.18075C15.0694 8.37873 14.6819 8.69704 14.4001 9.10075C14.1779 9.48994 14.0672 9.9328 14.0801 10.3808V10.5408H17.2001V9.70075Z"
+                fill="white"></path>
+              <path
+                d="M16.9198 11.5391H13.5198L11.8398 14.4591H15.2398L16.9198 17.3791L18.5998 14.4591L16.9198 11.5391Z"
+                fill="white"></path>
+              <path
+                d="M12.1203 16.4202C11.0806 16.4202 10.0836 16.0072 9.34841 15.2721C8.61327 14.5369 8.20027 13.5398 8.20027 12.5002C8.20027 11.4606 8.61327 10.4635 9.34841 9.72834C10.0836 8.9932 11.0806 8.5802 12.1203 8.5802L13.4803 5.7802C13.0315 5.69882 12.5763 5.65866 12.1203 5.6602C10.3062 5.6602 8.56641 6.38084 7.28366 7.66359C6.00091 8.94634 5.28027 10.6861 5.28027 12.5002C5.28027 14.3143 6.00091 16.0541 7.28366 17.3368C8.56641 18.6196 10.3062 19.3402 12.1203 19.3402C13.5677 19.3465 14.9806 18.8989 16.1603 18.0602L14.6803 15.4602C13.9717 16.0802 13.0618 16.4214 12.1203 16.4202Z"
+                fill="white"></path>
             </g>
             <defs>
               <clipPath id="clip0_2773_28657">
-                <rect width="24" height="24" fill="white" transform="translate(0 0.5)"></rect>
+                <rect
+                  width="24"
+                  height="24"
+                  fill="white"
+                  transform="translate(0 0.5)"></rect>
               </clipPath>
             </defs>
           </svg>
         </div>
-        <!-- <p class="text-gray-500 lg:text-md  text-base">Rated 4.7/5 on G2</p> -->
-      </div>
-      
+        <p class="text-gray-500 lg:text-md text-base">Rated 4.7/5 on G2</p>
+      </div> -->
     </div>
     <VoiceAIButton />
     <div class="flex justify-center gap-3 mt-10 flex-col sm:flex-row">
@@ -70,61 +91,80 @@ import VoiceAIButton from "../infopages/VoiceAIButton.astro";
         <strong class="text-gray-700">24/7 AI Receptionist</strong> ━ Manage inbound
         calls
       </div>
-      
+
       <div class="text-gray-500">
         <strong class="text-gray-700">AI Answering Service</strong> ━ Answer all
-        your customer questions </div>
-          <div class="text-gray-500">
-            <strong class="text-gray-700">AI Outbound calls</strong> ━ Generate leads,
-            Qualify prospects, collect key details, and schedule follow-ups.
-          </div>
-        </div>
+        your customer questions
+      </div>
+      <div class="text-gray-500">
+        <strong class="text-gray-700">AI Outbound calls</strong> ━ Generate leads,
+        Qualify prospects, collect key details, and schedule follow-ups.
+      </div>
+    </dl>
 
-        <div class="relative w-full mx-auto max-w-7xl items-center py-12 pb-12">
-          <!-- <div class="bg-gray-100 p-8 rounded-3xl"> -->
-          <!-- <VoiceAIButton /> -->
-          <!-- <img
+    <div class="relative w-full mx-auto max-w-7xl items-center py-12 pb-12">
+      <!-- <div class="bg-gray-100 p-8 rounded-3xl"> -->
+      <!-- <VoiceAIButton /> -->
+      <!-- <img
           alt="#_"
           class="relative w-full border border-gray-200 lg:rounded-2xl object-cover rounded shadow-2xl"
           src="https://brightlight.lexingtonthemes.com/assets/dashboard.svg"
         /> -->
 
-          <!-- </div> -->
-          <!-- </div> -->
-          <div class=" items-center justify-center gap-1 max-w-xxl space-x-4">
-            <div class="text-center mb-2">
-              <p class=" tracking-tight font-semibold text-black  font-display ">
-                Trusted by over 1000 companies of all sizes
-              </p>
-            </div>
-            <!-- Left Text Section -->
-          
-            <!-- Grid Section -->
-            <div class="grid grid-cols-2 gap-[6vh] md:gap-2 lg:mt-8 md:grid-cols-6 mt-6">
-            
-              <div class="flex justify-center col-span-1 ">
-                <img alt="logo" class="h-5 md:h-[4vh]" src="/images/logos/openai.webp" />
-              </div>
-              <div class="flex justify-center col-span-1">
-                <img alt="logo" class="h-6 md:h-8" src="/images/logos/Twilio-logo-red.webp" />
-              </div>
-              <div class="flex justify-center col-span-1 ">
-                <img alt="logo"  class="h-7 md:h-[4vh]" src="/images/logos/Shopify_logo_2018.webp" />
-              </div>
-              <div class="flex justify-center col-span-1">
-                <img alt="logo" class="h-5 md:h-8" src="/images/logos/logo.svg" />
-              </div>
-              <div class="flex justify-center col-span-1 ">
-                <img alt="logo" class="h-8 md:h-12" src="/images/logos/magical.svg" />
-              </div>
-              <div class="flex justify-center col-span-1">
-                <img alt="logo" class="h-8 md:h-12" src="/images/logos/AWRENCE2.svg" />
-              </div>
-            </div>
+      <!-- </div> -->
+      <!-- </div> -->
+      <div class="items-center justify-center gap-1 max-w-xxl space-x-4">
+        <div class="text-center mb-2">
+          <p class="tracking-tight font-semibold text-black font-display">
+            Trusted by over 1000 companies of all sizes
+          </p>
+        </div>
+        <!-- Left Text Section -->
+
+        <!-- Grid Section -->
+        <div
+          class="grid grid-cols-2 gap-[6vh] md:gap-2 lg:mt-8 md:grid-cols-6 mt-6"
+        >
+          <div class="flex justify-center col-span-1">
+            <img
+              alt="logo"
+              class="h-5 md:h-[4vh]"
+              src="/images/logos/openai.webp"
+            />
           </div>
-          
+          <div class="flex justify-center col-span-1">
+            <img
+              alt="logo"
+              class="h-6 md:h-8"
+              src="/images/logos/Twilio-logo-red.webp"
+            />
+          </div>
+          <div class="flex justify-center col-span-1">
+            <img
+              alt="logo"
+              class="h-7 md:h-[4vh]"
+              src="/images/logos/Shopify_logo_2018.webp"
+            />
+          </div>
+          <div class="flex justify-center col-span-1">
+            <img alt="logo" class="h-5 md:h-8" src="/images/logos/logo.svg" />
+          </div>
+          <div class="flex justify-center col-span-1">
+            <img
+              alt="logo"
+              class="h-8 md:h-12"
+              src="/images/logos/magical.svg"
+            />
+          </div>
+          <div class="flex justify-center col-span-1">
+            <img
+              alt="logo"
+              class="h-8 md:h-12"
+              src="/images/logos/AWRENCE2.svg"
+            />
+          </div>
         </div>
       </div>
-    </dl>
+    </div>
   </div>
 </section>
