--- a/src/components/infopages/Blog.astro
+++ b/src/components/infopages/Blog.astro
@@ -304,13 +304,19 @@
     link: "/AI-Voice-Agents-for-E-Commerce-Benefits-&-Examples",
   },
   {
-    id: 36,
+    id: 37,
     title: "How AI Receptionists Help in the Healthcare Industry",
     description: "Explore how AI tools can boost your sales strategy.",
     image: "/images/Blogs/blog37.jpeg",
     link: "/How-AI-Receptionists-Help-in-the-Healthcare-Industry",
   },
-
+  {
+    id: 38,
+    title: "The Benefits of AI Voice Agents in Car Dealerships",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog38.jpeg",
+    link: "/The-Benefits-of-AI-Voice-Agents-in-Car-Dealerships",
+  },
 ];
 
  const reversedBlogs = [...blogs].reverse();
